<resources>
    <string name="app_name">Warteg SUHAN</string>

    <!-- Menu -->
    <string name="url">URL</string>
    <string name="list_stock">List Stock</string>
    <string name="list_pembeli">List Pembeli</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="kasir">Kasir</string>
    <string name="top_up">Top Up</string>

    <!-- Button -->
    <string name="create">new</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>

    <!-- Dialog -->
    <string name="search">Pencarian</string>

    <!-- Menu -->
    <string name="tipe_menu">Tipe Menu</string>
    <string name="menu_name">Nama Menu</string>
    <string name="qty">Qty</string>
    <string name="harga">Harga</string>

    <!-- Cashier -->
    <string name="customer_id">Customer ID</string>
    <string name="checkout">checkout</string>
    <string name="total">Total:</string>
    <string name="place_order">Order</string>

    <!-- Top Up -->
    <string name="new_customer">Customer Baru</string>
    <string name="update_customer">Update Saldo</string>
    <string name="top_up_method">Metode Top Up</string>
    <string name="jumlah">Jumlah</string>

    <string-array name="menu_type">
        <item>Makanan</item>
        <item>Minuman</item>
        <item>Paket</item>
    </string-array>
</resources>