<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".ui.TopUpActivity">

    <TextView
        android:id="@+id/lblMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_up_method"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbUpdate"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/lblMethod"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/rbUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_customer" />
        <RadioButton
            android:id="@+id/rbInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_customer" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCustomerID"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:hint="@string/customer_id"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconMode="custom"
        app:errorIconDrawable="@null"
        app:layout_constraintTop_toBottomOf="@id/rgMethod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.netlab.suhan.utils.CurrencyEditText
            android:id="@+id/etCustomerID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textStart"
            android:clickable="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutJumlah"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:hint="@string/jumlah"
        app:prefixText="Rp"
        app:suffixText=",00"
        app:layout_constraintTop_toBottomOf="@id/layoutCustomerID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.6"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.netlab.suhan.utils.CurrencyEditText
            android:id="@+id/etJumlah"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textAlignment="textEnd"
            android:selectAllOnFocus="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTopUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/top_up"
        app:icon="@drawable/ic_baseline_monetization_on_24"
        app:layout_constraintTop_toBottomOf="@id/layoutJumlah"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>